Fix y-overflow for sidebar

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,4 +1,5 @@
 html { height: 100%; }
+
 body {
   height: 100%;
   font-family: 'Carme', Helvetica, sans-serif;
@@ -6,15 +7,22 @@ body {
 }
 
 .main {
-  @include span-columns(10 omega, 12)
+  @include span-columns(10 omega, 12);
 }
 
 .sidebar {
   height: 100%;
-  @include span-columns(2, 12)
+  @include span-columns(2, 12);
+  background-color: $dark_blue;
+}
+
+.content {
+  margin-top: 92px;
 }
 
 header.top {
+  position: absolute;
+  @include span-columns(12);
   background-color: #D3D3D3;
   height: 92px;
 }
