--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -1,5 +1,3 @@
-@import 'partials/colors';
-
 @mixin sidebar_item {
   border-bottom: 1px solid white;
   line-height: 2em;
@@ -35,11 +33,10 @@
 }
 
 .facets {
-  height: 100%;
-  background-color: $dark_blue;
-  h2 { display: none; }
-
+  padding-top: 92px;
   font-size: 0.8em;
+
+  h2 { display: none; }
 
   h3 {
     @include facet_level_1;
